--- a/uade-01-julio-2020/test_api_get_desde_nodejs_&_cronjob/docker-compose.yml
+++ b/uade-01-julio-2020/test_api_get_desde_nodejs_&_cronjob/docker-compose.yml
@@ -1,19 +1,21 @@
 version: '3'
 services:
   nginx-proxy:
-    image: jwilder/nginx-proxy 
+    image: jwilder/nginx-proxy
     restart: always
     ports:
       - "80:80"
       - "443:443"
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
-      #- /Users/fernandobustamante/.server/nginx-ssl/certs:/etc/nginx/certs:ro
-      #- /Users/fernandobustamante/.server/nginx-ssl/certs
+      - /Users/fernandobustamante/.server/nginx-ssl/certs:/etc/nginx/certs:ro
+      - /Users/fernandobustamante/.server/nginx-ssl/certs
       - /etc/nginx/vhost.d
       - /usr/share/nginx/html
     labels:
-      - com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy 
+      - com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy
+    networks:
+      - pensaenverde
 
   #letsencrypt:
   #  image: linuxserver/letsencrypt
@@ -119,22 +121,25 @@ services:
 
   pensaenverde_mysql_db:
     image: mysql:latest
+    hostname: pensaenverde_mysql_db
     container_name: pensaenverde_mysql_db
     restart: always
-    ports:
-      - "3306:3306"
+    expose:
+      - "3306"
     volumes:
-      #- ${MYSQL_DB_VOLUME_LOCAL_PATH}:/var/lib/mysql
-      - /Users/fernandobustamante/.server/pensaenverde_mysql_db:/var/lib/mysql
+      - ${MYSQL_DB_VOLUME_LOCAL_PATH}:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_PASS=${MYSQL_PASS}
     networks:
-      - pensaenverde
+      pensaenverde:
+        aliases:
+          - pensaenverde_mysql_db
 
   www9:
     image: nginx
+    hostname: pensaenverde_web
     container_name: pensaenverde_web
     restart: always
     expose:
@@ -150,10 +155,13 @@ services:
     depends_on:
       - pensaenverde_app 
     networks:
-      - pensaenverde
+      pensaenverde:
+        aliases:
+          - pensaenverde_web
 
   pensaenverde_app:
     image: m6t6ng6/pensaenverde:0.0.1
+    hostname: pensaenverde_app
     container_name: pensaenverde_app
     restart: always
     expose:
@@ -170,7 +178,12 @@ services:
     depends_on:
       - pensaenverde_mysql_db
     networks:
-      - pensaenverde
+      pensaenverde:
+        aliases:
+          - pensaenverde_app
+    dns:
+      - 8.8.8.8
+      - 9.9.9.9
 
 networks:
   pensaenverde:
