--- a/uade-01-julio-2020/test_api_get_desde_nodejs_&_cronjob/docker-compose.yml
+++ b/uade-01-julio-2020/test_api_get_desde_nodejs_&_cronjob/docker-compose.yml
@@ -164,8 +164,8 @@ services:
     hostname: pensaenverde_app
     container_name: pensaenverde_app
     restart: always
-    expose:
-      - "3000"
+    ports:
+      - "3000:3000"
     environment:
       - APP_URL=${APP_URL}
       - APP_PORT=${APP_PORT}
