mejoras en VIRTUAL_HOST

--- a/uade-01-julio-2020/test_api_get_desde_nodejs_&_cronjob/.env.dev
+++ b/uade-01-julio-2020/test_api_get_desde_nodejs_&_cronjob/.env.dev
@@ -8,3 +8,4 @@ MYSQL_DB_VOLUME_LOCAL_PATH=/Users/fernandobustamante/.server/pensaenverde_mysql_
 APP_URL=pensaenverde_app
 APP_PORT=3000
 APP_VOLUME_LOCAL_PATH=/Users/fernandobustamante/.server/docker-share/html1/
+VIRTUAL_HOST=pensaenverde
