--- a/uade-01-julio-2020/test_api_get_desde_nodejs_&_cronjob/.env.prod
+++ b/uade-01-julio-2020/test_api_get_desde_nodejs_&_cronjob/.env.prod
@@ -8,3 +8,4 @@ MYSQL_DB_VOLUME_LOCAL_PATH=/root/.server/pensaenverde_mysql_db
 APP_URL=pensaenverde_app
 APP_PORT=3000
 APP_VOLUME_LOCAL_PATH=/root/.server/docker-share/html3/uade-01-julio-2020
+VIRTUAL_HOST=pensaenverde.matanga.net.ar
