--- a/uade-01-julio-2020/test_api_get_desde_nodejs_&_cronjob/.env.prod
+++ b/uade-01-julio-2020/test_api_get_desde_nodejs_&_cronjob/.env.prod
@@ -5,7 +5,7 @@ MYSQL_PASS=peperina
 MYSQL_HOST=pensaenverde_mysql_db
 MYSQL_PORT=3306
 MYSQL_DB_VOLUME_LOCAL_PATH=/root/.server/pensaenverde_mysql_db
-APP_URL=pensaenverde_app
+APP_URL=pensaenverde.matanga.net.ar
 APP_PORT=3000
 APP_VOLUME_LOCAL_PATH=/root/.server/docker-share/html3/uade-01-julio-2020
 VIRTUAL_HOST=pensaenverde.matanga.net.ar
