--- a/uade-01-julio-2020/pensaenverde_api/docker-compose.yml
+++ b/uade-01-julio-2020/pensaenverde_api/docker-compose.yml
@@ -1,7 +1,9 @@
-version: '3'
+version: '3.8'
 services:
-  nginx-proxy:
+  nginx-reverse-proxy:
     image: jwilder/nginx-proxy
+    hostname: nginx-reverse-proxy
+    container_name: nginx-reverse-proxy
     restart: always
     ports:
       - "80:80"
@@ -133,13 +135,11 @@ services:
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_PASS=${MYSQL_PASS}
     networks:
-      pensaenverde:
-        aliases:
-          - pensaenverde_mysql_db
+      - pensaenverde
 
-  www9:
+  pensaenverde_frontend:
     image: nginx
-    hostname: pensaenverde_web
+    hostname: pensaenverde_frontend
     container_name: pensaenverde_web
     restart: always
     expose:
@@ -153,11 +153,10 @@ services:
       #- LETSENCRYPT_HOST=pensaenverde
       #- LETSENCRYPT_EMAIL=ferna2909@hotmail.com
     depends_on:
+      - nginx-reverse-proxy 
       - pensaenverde_app 
     networks:
-      pensaenverde:
-        aliases:
-          - pensaenverde_web
+      - pensaenverde
 
   pensaenverde_app:
     image: m6t6ng6/pensaenverde:0.0.1
@@ -178,14 +177,14 @@ services:
     depends_on:
       - pensaenverde_mysql_db
     networks:
-      pensaenverde:
-        aliases:
-          - pensaenverde_app
+      - pensaenverde
+    
     dns:
       - 8.8.8.8
       - 9.9.9.9
 
 networks:
   pensaenverde:
+    name: pensaenverde
     driver: bridge
  
