se añadio chart de historico

--- a/uade-01-julio-2020/pensaenverde_api/.env.dev
+++ b/uade-01-julio-2020/pensaenverde_api/.env.dev
@@ -1,11 +1,11 @@
-MYSQL_ROOT_USER=root
-MYSQL_ROOT_PASSWORD=peperina
-MYSQL_USER=test
-MYSQL_PASS=peperina
-MYSQL_HOST=pensaenverde_mysql_db
-MYSQL_PORT=3306
-MYSQL_DB_VOLUME_LOCAL_PATH=/Users/fernandobustamante/.server/pensaenverde_mysql_db
-APP_URL=pensaenverde_app
-APP_PORT=3000
-APP_VOLUME_LOCAL_PATH=/Users/fernandobustamante/.server/docker-share/html1/
-VIRTUAL_HOST=pensaenverde
+export MYSQL_ROOT_USER=root
+export MYSQL_ROOT_PASSWORD=peperina
+export MYSQL_USER=test
+export MYSQL_PASS=peperina
+export MYSQL_HOST=raspy
+export MYSQL_PORT=3306
+#MYSQL_DB_VOLUME_LOCAL_PATH=/Users/fernandobustamante/.server/pensaenverde_mysql_db
+export APP_URL=localhost
+export APP_PORT=3300
+#APP_VOLUME_LOCAL_PATH=/Users/fernandobustamante/.server/docker-share/html1/
+#VIRTUAL_HOST=pensaenverde
