docker-prod para 0.0.2

--- a/uade-01-julio-2020/pensaenverde_api/docker-compose.yml
+++ b/uade-01-julio-2020/pensaenverde_api/docker-compose.yml
@@ -159,7 +159,7 @@ services:
       - pensaenverde
 
   pensaenverde_app:
-    image: m6t6ng6/pensaenverde:0.0.1
+    image: m6t6ng6/pensaenverde:0.0.2_production
     hostname: pensaenverde_app
     container_name: pensaenverde_app
     restart: always
